--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@ body {
     background-size: 700px;
 }
 @font-face {
- font-family: ' metal lord';
+ font-family:  metal lord;
  src: url(metal_lord.woff);
 		}
 
